--- a/src/components/BasketItem/BasketItem.css
+++ b/src/components/BasketItem/BasketItem.css
@@ -6,7 +6,7 @@
   margin-bottom: 0.5rem;
   border-radius: 3px;
   display: flex;
-  align-items: center;
+  line-height: 2rem;
   justify-content: space-between;
 }
 
