--- a/src/components/Summary/Summary.css
+++ b/src/components/Summary/Summary.css
@@ -2,6 +2,12 @@
   background: #ffffff;
   border: 2px solid black;
   border-radius: 4px;
-  padding: 2rem;
+  padding: 0.5rem 2rem;
   max-width: 40rem;
+}
+
+.summary__submit {
+  color: green;
+  font-size: 20px;
+  padding: 0 0.5rem 0.25rem 0.5rem;
 }
