--- a/src/components/Basket/Basket.css
+++ b/src/components/Basket/Basket.css
@@ -1,6 +1,7 @@
 .basket {
   background: #e8e8e8;
   border-radius: 4px;
-  padding: 2rem;
+  padding: 0.5rem 2rem;
+  margin: 1rem 0;
   max-width: 40rem;
 }
