--- a/src/components/RecipientForm/RecipientForm.css
+++ b/src/components/RecipientForm/RecipientForm.css
@@ -1,7 +1,7 @@
 .recipient-form {
   border-top: 1px solid #bbbbbb;
   border-radius: 4px;
-  padding: 1rem;
+  padding: 0.5rem 2rem;
   margin: 1rem 0;
   background: #e8e8e8;
   max-width: 20rem;
